refactor(v2): change hand emoji position

--- a/v2/index.css
+++ b/v2/index.css
@@ -32,8 +32,10 @@ body {
 }
 
 .header__hand-icon {
-  width: 256px;
-  height: 256px;
+  width: 96px;
+  height: 96px;
+
+  flex-shrink: 0;
 }
 
 .header__group {
